orchestrator/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  type: ClusterIP
  selector:
    app: orchestrator
  ports:
    - name: http
      port: 4000
      targetPort: 4000
