orchestrator/orchestrator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sandbox.local.gymmanagement.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 4000
